# climate-uart

./: CMakeLists.txt  LICENSE  README.md  idf_component.yml  keywords.txt  library.json  library.properties
examples/PowerOff/: PowerOff.ino
examples/daikin_s21/: daikin_s21.ino
include/climate_uart/: climate_interface.h  climate_types.h  common.h  platform.h  result.h
include/climate_uart/protocols/: lg_aircon.h  toshiba.h
include/climate_uart/transport/: uart_transport.h  uart_transport_arduino.h  uart_transport_esp32.h
src/: ClimateUART.h  platform.cpp  platform_arduino.cpp  platform_esp32.cpp
src/climate_uart/: climate_types.h  platform.h
src/climate_uart/protocols/: daikin_s21.h  fujitsu.h  hitachi_hlink.h  mitsubishi.h  sharp.h
src/climate_uart/transport/: uart_transport.h  uart_transport_arduino.h
src/platform/: platform_arduino.cpp  platform_esp32.cpp
src/protocols/: daikin_s21.cpp  fujitsu.cpp  hitachi_hlink.cpp  lg_aircon.cpp  mitsubishi.cpp  sharp.cpp  toshiba.cpp
src/transport/: uart_transport_arduino.cpp  uart_transport_esp32.cpp
